manifests/home-assistant/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-private
  labels:
    gateway: private
spec:
  hostnames:
    - home-assistant.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: http
  rules:
    - backendRefs:
        - name: home-assistant
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-public
  labels:
    gateway: public
spec:
  hostnames:
    - home-assistant.stamx.nl
  parentRefs:
    - name: public
      namespace: gateway-public
      sectionName: https
  rules:
    - backendRefs:
        - name: home-assistant
          port: 80
